--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -1,58 +1,58 @@
 {
-    "choose": "Parcourir",
-    "from": "De",
-    "group.Personnel": "Tous les personnels du groupe {0}.",
-    "group.Relative": "Tous les parents du groupe {0}.",
-    "group.Student": "Tous les élèves du groupe {0}.",
-    "group.Teacher": "Tous les enseignants du groupe {0}.",
-    "group.class.Personnel": "Tous les personnels de la classe {0}.",
-    "group.class.Relative": "Tous les parents de la classe {0}.",
-    "group.class.Student": "Tous les élèves de la classe {0}.",
-    "group.class.Teacher": "Tous les enseignants de la classe {0}.",
-    "group.school.Personnel": "Tous les personnels de l'{0}.",
-    "group.school.Relative": "Tous les parents de l'{0}.",
-    "group.school.Student": "Tous les élèves de l'{0}.",
-    "group.school.Teacher": "Tous les enseignants de l'{0}.",
-    "import.file": "Importer",
-    "loading": "Chargement",
-    "nofile": "Aucun fichier",
+    "choose": "Look over",
+    "from": "From",
+    "group.Personnel": "Staff from group {0}.",
+    "group.Relative": "Relatives from group {0}.",
+    "group.Student": "Students from group  {0}.",
+    "group.Teacher": "Teachers from group  {0}.",
+    "group.class.Personnel": "Staff from class {0}.",
+    "group.class.Relative": "Relatives from class {0}.",
+    "group.class.Student": "Students from class {0}.",
+    "group.class.Teacher": "Teachers from class {0}.",
+    "group.school.Personnel": "Staff from {0}.",
+    "group.school.Relative": "Relatives from {0}.",
+    "group.school.Student": "Students from {0}.",
+    "group.school.Teacher": "Teachers from {0}.",
+    "import.file": "Import",
+    "loading": "Loading",
+    "nofile": "No file",
     "rack.contrib": "Contribution",
-    "rack.copy": "Copier",
-    "rack.createFolder": "Créer un nouveau dossier",
-    "rack.file": "Fichier",
-    "rack.folder.create": "Créer",
-    "rack.history": "Historique",
-    "rack.manager": "Gestion",
-    "rack.mine": "Mon casier",
-    "rack.move": "Déplacer",
-    "rack.name": "Nom du document",
-    "rack.notify.copyToWorkspace": "Le document a été copié dans l'espace documentaire",
-    "rack.notify.deleted": "Le document a été supprimé",
-    "rack.notify.restored": "Le document a été restauré",
-    "rack.notify.trashed": "Le document a été mis à la corbeille",
-    "rack.racktodocs": "Copier dans mes documents",
-    "rack.read": "Lecture",
-    "rack.resetReceivers": "Réinitialiser les destinataires",
-    "rack.root": "Mes documents",
-    "rack.sendRack": "Déposer dans un casier",
-    "rack.sent.message": "Votre document a bien été envoyé",
-    "rack.sent.message.error": "Erreur durant l'envoi de votre document",
-    "rack.sent.message.partial": "Certains destinataires n'ont pas pu recevoir votre document",
+    "rack.copy": "Copy",
+    "rack.createFolder": "Create a new folder",
+    "rack.file": "File",
+    "rack.folder.create": "Create",
+    "rack.history": "History",
+    "rack.manager": "Manager",
+    "rack.mine": "My rack",
+    "rack.move": "Move",
+    "rack.name": "File name",
+    "rack.notify.copyToWorkspace": "The document have been copied in your workspace",
+    "rack.notify.deleted": "The document has been removed",
+    "rack.notify.restored": "The document has been restored",
+    "rack.notify.trashed": "The document was trashed",
+    "rack.racktodocs": "Copy to my documents",
+    "rack.read": "Reading",
+    "rack.resetReceivers": "Reset recipients",
+    "rack.root": "My Documents",
+    "rack.sendRack": "Place in a rack",
+    "rack.sent.message": "Your document has been sent",
+    "rack.sent.message.error": "Error while sending your document",
+    "rack.sent.message.partial": "Some recipients were unable to receive your document",
     "rack.title": "Rack",
-    "rack.to": "Destinataire(s)",
-    "rack.trash": "Corbeille",
-    "rack.usedSpace": "Espace utilisé",
-    "root": "Racine",
-    "seemore": "Voir la suite",
-    "sentDate": "Date d'envoi",
-    "share.groups": "Groupes",
-    "share.more": "Voir la suite",
-    "share.search.placeholder": "Ex : Sabine, Dupont, Enseignants de l'école...",
-    "share.search.title": "Rechercher des utilisateurs et des groupes",
-    "share.title": "Partager avec...",
-    "share.users": "Utilisateurs",
-    "title": "Titre",
+    "rack.to": "Recipient(s)",
+    "rack.trash": "Trash",
+    "rack.usedSpace": "Space used",
+    "root": "Root",
+    "seemore": "See more",
+    "sentDate": "Date of dispatch",
+    "share.groups": "Groups",
+    "share.more": "See more",
+    "share.search.placeholder": "Ex : Emily, SMITH, All teachers...",
+    "share.search.title": "Search for users and groups",
+    "share.title": "Share with ...",
+    "share.users": "Users",
+    "title": "Title",
     "to": "A",
-    "unsetImage": "Supprimer l'image",
-    "upload": "Envoyer"
+    "unsetImage": "Delete image",
+    "upload": "Send"
 }
