--- a/src/main/resources/i18n/timeline/en.json
+++ b/src/main/resources/i18n/timeline/en.json
@@ -1,3 +1,3 @@
 {
-    "timeline.rack.post": " a déposé dans votre casier le document : "
+    "timeline.rack.post": " filed in your rack the document : "
 }
