--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -9,6 +9,9 @@
     "group.class.Relative": "Relatives from class {0}.",
     "group.class.Student": "Students from class {0}.",
     "group.class.Teacher": "Teachers from class {0}.",
+    "group.contrib": "Tous les contributeurs de la communauté {0}.",
+    "group.manager": "Tous les gestionnnaires de la communauté {0}.",
+    "group.read": "Tous les lecteurs de la communauté {0}.",
     "group.school.Personnel": "Staff from {0}.",
     "group.school.Relative": "Relatives from {0}.",
     "group.school.Student": "Students from {0}.",
