[e] #3768 added translations for multiple files

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -33,6 +33,10 @@
     "rack.notify.deleted": "Le document a été supprimé",
     "rack.notify.restored": "Le document a été restauré",
     "rack.notify.trashed": "Le document a été mis à la corbeille",
+    "rack.notify.deleted.plural": "Les documents ont été supprimés",
+    "rack.notify.restored.plural": "Les documents ont été restaurés",
+    "rack.notify.trashed.plural": "Les documents ont été mis à la corbeille",
+    "rack.notify.copyToWorkspace.plural": "Les documents ont été copiés dans l'espace documentaire",
     "rack.racktodocs": "Copier dans mes documents",
     "rack.read": "Lecture",
     "rack.resetReceivers": "Réinitialiser les destinataires",
@@ -41,6 +45,9 @@
     "rack.sent.message": "Votre document a bien été envoyé",
     "rack.sent.message.error": "Erreur durant l'envoi de votre document",
     "rack.sent.message.partial": "Certains destinataires n'ont pas pu recevoir votre document",
+    "rack.sent.message.plural": "Vos documents ont bien été envoyés",
+    "rack.sent.message.error.plural": "Erreur durant l'envoi de vos documents",
+    "rack.sent.message.partial.plural": "Certains destinataires n'ont pas pu recevoir vos documents",
     "rack.title": "Casier",
     "rack.to": "Destinataire(s)",
     "rack.trash": "Corbeille",
