--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -30,9 +30,13 @@
     "rack.move": "Move",
     "rack.name": "File name",
     "rack.notify.copyToWorkspace": "The document have been copied in your workspace",
+    "rack.notify.copyToWorkspace.plural": "Les documents ont été copiés dans l'espace documentaire",
     "rack.notify.deleted": "The document has been removed",
+    "rack.notify.deleted.plural": "Les documents ont été supprimés",
     "rack.notify.restored": "The document has been restored",
+    "rack.notify.restored.plural": "Les documents ont été restaurés",
     "rack.notify.trashed": "The document was trashed",
+    "rack.notify.trashed.plural": "Les documents ont été mis à la corbeille",
     "rack.racktodocs": "Copy to my documents",
     "rack.read": "Reading",
     "rack.resetReceivers": "Reset recipients",
@@ -40,7 +44,10 @@
     "rack.sendRack": "Place in a rack",
     "rack.sent.message": "Your document has been sent",
     "rack.sent.message.error": "Error while sending your document",
+    "rack.sent.message.error.plural": "Erreur durant l'envoi de vos documents",
     "rack.sent.message.partial": "Some recipients were unable to receive your document",
+    "rack.sent.message.partial.plural": "Certains destinataires n'ont pas pu recevoir vos documents",
+    "rack.sent.message.plural": "Vos documents ont bien été envoyés",
     "rack.title": "Rack",
     "rack.to": "Recipient(s)",
     "rack.trash": "Trash",
