[fix] #3768 added dots

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -31,12 +31,12 @@
     "rack.name": "Nom du document",
     "rack.notify.copyToWorkspace": "Le document a été copié dans l'espace documentaire",
     "rack.notify.copyToWorkspace.plural": "Les documents ont été copiés dans l'espace documentaire",
-    "rack.notify.deleted": "Le document a été supprimé",
-    "rack.notify.deleted.plural": "Les documents ont été supprimés",
-    "rack.notify.restored": "Le document a été restauré",
-    "rack.notify.restored.plural": "Les documents ont été restaurés",
-    "rack.notify.trashed": "Le document a été mis à la corbeille",
-    "rack.notify.trashed.plural": "Les documents ont été mis à la corbeille",
+    "rack.notify.deleted": "Le document a été supprimé.",
+    "rack.notify.deleted.plural": "Les documents ont été supprimés.",
+    "rack.notify.restored": "Le document a été restauré.",
+    "rack.notify.restored.plural": "Les documents ont été restaurés.",
+    "rack.notify.trashed": "Le document a été mis à la corbeille.",
+    "rack.notify.trashed.plural": "Les documents ont été mis à la corbeille.",
     "rack.racktodocs": "Copier dans mes documents",
     "rack.read": "Lecture",
     "rack.resetReceivers": "Réinitialiser les destinataires",
