--- a/src/main/resources/i18n/timeline/fr.json
+++ b/src/main/resources/i18n/timeline/fr.json
@@ -1,3 +1,6 @@
 {
+    "rack": "Casier",
+    "rack.rack-post": "Dépôt de document dans un casier",
+    "rack.storage": "Espace disque faible",
     "timeline.rack.post": " a déposé dans votre casier le document : "
 }
