[evo]#10611 explorer navigation on rack icon-view

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -23,6 +23,7 @@
     "rack.contrib": "Contribution",
     "rack.copy": "Copier",
     "rack.createFolder": "Créer un nouveau dossier",
+    "rack.download": "Télécharger",
     "rack.file": "Fichier",
     "rack.folder.create": "Créer",
     "rack.history": "Historique",
