--- a/src/main/resources/i18n/pt.json
+++ b/src/main/resources/i18n/pt.json
@@ -22,6 +22,7 @@
     "rack.contrib": "Contribution",
     "rack.copy": "Copier",
     "rack.createFolder": "Créer un nouveau dossier",
+    "rack.download": "Download",
     "rack.file": "Fichier",
     "rack.folder.create": "Créer",
     "rack.history": "Historique",
