--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -22,6 +22,7 @@
     "rack.contrib": "Contribution",
     "rack.copy": "Copy",
     "rack.createFolder": "Create a new folder",
+    "rack.download": "Download",
     "rack.file": "File",
     "rack.folder.create": "Create",
     "rack.history": "History",
