[evo]#10995 info panel icons-view in i18n

--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -65,5 +65,10 @@
     "title": "Title",
     "to": "A",
     "unsetImage": "Delete image",
-    "upload": "Send"
+    "upload": "Send",
+    "tuto.title": "Naviguez au sein de votre casier en vue vignettes :",
+    "tuto.action.select": "Cliquez",
+    "tuto.text.select": "pour séléctionner et accéder au menu d'options,",
+    "tuto.action.open": "Cliquez sur l'icône",
+    "tuto.text.open": "pour télécharger le document."
 }
