--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -56,7 +56,7 @@
     "rack.usedSpace": "Espace utilisé",
     "root": "Racine",
     "seemore": "Voir la suite",
-    "sentDate": "Date d'envoi",
+    "sentDate": "Date",
     "share.groups": "Groupes",
     "share.more": "Voir la suite",
     "share.search.placeholder": "Ex : Sabine, Dupont, Enseignants de l'école...",
