[Fix] #14970 Added trad key for guests

--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -5,10 +5,12 @@
     "group.Relative": "Relatives from group {0}.",
     "group.Student": "Students from group  {0}.",
     "group.Teacher": "Teachers from group  {0}.",
+    "group.Guest": "Guests from group  {0}.",
     "group.class.Personnel": "Staff from class {0}.",
     "group.class.Relative": "Relatives from class {0}.",
     "group.class.Student": "Students from class {0}.",
     "group.class.Teacher": "Teachers from class {0}.",
+    "group.class.Guest": "Guests from class {0}.",
     "group.contrib": "Tous les contributeurs de la communauté {0}.",
     "group.manager": "Tous les gestionnnaires de la communauté {0}.",
     "group.read": "Tous les lecteurs de la communauté {0}.",
@@ -16,6 +18,7 @@
     "group.school.Relative": "Relatives from {0}.",
     "group.school.Student": "Students from {0}.",
     "group.school.Teacher": "Teachers from {0}.",
+    "group.school.Guest": "Guests from {0}.",
     "import.file": "Import",
     "loading": "Loading",
     "nofile": "No file",
