--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -13,7 +13,7 @@
     "group.class.Teacher": "Tous les enseignants de la classe {0}.",
     "group.class.Guest": "Tous les invités de la classe {0}.",
     "group.contrib": "Tous les contributeurs de la communauté {0}.",
-    "group.manager": "Tous les gestionnnaires de la communauté {0}.",
+    "group.manager": "Tous les gestionnaires de la communauté {0}.",
     "group.read": "Tous les lecteurs de la communauté {0}.",
     "group.school.Personnel": "Tous les personnels de l'{0}.",
     "group.school.Relative": "Tous les parents de l'{0}.",
