minor change on i18n

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -26,7 +26,7 @@
     "rack.contrib": "Contribution",
     "rack.copy": "Copier",
     "rack.createFolder": "Créer un nouveau dossier",
-    "rack.download": "Télécharger",
+    "rack.download": "Télécharger le document",
     "rack.file": "Fichier",
     "rack.folder.create": "Créer",
     "rack.history": "Historique",
