AM-84 : Rack push notification

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -74,5 +74,6 @@
     "tuto.action.select": "Cliquez",
     "tuto.text.select": "pour séléctionner et accéder au menu d'options,",
     "tuto.action.open": "Cliquez sur l'icône",
-    "tuto.text.open": "pour télécharger le document."
+    "tuto.text.open": "pour télécharger le document.",
+    "rack.push.notif.rack-post.body" : "{0} a déposé le document {1} dans votre casier"
 }
