--- a/src/main/resources/i18n/timeline/fr.json
+++ b/src/main/resources/i18n/timeline/fr.json
@@ -2,5 +2,6 @@
     "rack": "Casier",
     "rack.rack-post": "Dépôt de document dans un casier",
     "rack.storage": "Espace de stockage bientôt plein",
-    "timeline.rack.post": " a déposé dans votre casier le document : "
+    "timeline.rack.post": " a déposé dans votre casier le document : ",
+    "rack.push.notif.rack-post": "Casier : Dépôt de document dans un casier"
 }
