feat(onboarding) #26002, empty-screens (+1 squashed commit) Squashed commits: [f73f9a0] feat(onboarding) #26002, add emptyscreen

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -32,7 +32,7 @@
     "rack.download": "Télécharger le document",
     "rack.file": "Fichier",
     "rack.folder.create": "Créer",
-    "rack.history": "Historique",
+    "rack.history": "Mes dépôts",
     "rack.manager": "Gestion",
     "rack.mine": "Mon casier",
     "rack.move": "Déplacer",
