--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -75,7 +75,7 @@
     "upload": "Envoyer",
     "tuto.title": "Naviguez au sein de votre casier en vue vignettes :",
     "tuto.action.select": "Cliquez",
-    "tuto.text.select": "pour séléctionner et accéder au menu d'options,",
+    "tuto.text.select": "pour sélectionner et accéder au menu d'options,",
     "tuto.action.open": "Cliquez sur l'icône",
     "tuto.text.open": "pour télécharger le document.",
     "rack.push.notif.rack-post.body" : "{0} a déposé le document {1} dans votre casier",
