--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -2,6 +2,7 @@
     "choose": "Parcourir",
     "from": "De",
     "group.HeadTeacher": "Professeurs principaux de {0}.",
+    "group.Direction": "Directeurs de {0}.",
     "group.Func": "Personnels de fonction {0}.",
     "group.Discipline": "Enseignants de discipline {0}.",
     "group.AdminLocal": "Administrateurs locaux de {0}.",
