feat: INTEG-897, implement nextcloud periodical sync
feat: INTEG-897, group files in Rack by class name

feat: INTEG-897, update UI to display files sync status message

feat: INTEG-897, implement Nextcloud sync for Rack documents

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -84,5 +84,6 @@
   "tuto.text.select": "pour sélectionner et accéder au menu d'options,",
   "tuto.title": "Naviguez au sein de votre casier en vue vignettes :",
   "unsetImage": "Supprimer l'image",
-  "upload": "Envoyer"
+  "upload": "Envoyer",
+  "rack.nextcloud.sync.success": "Synchronisé avec l'espace documentaire"
 }
