feat: INTEG-897, implement nextcloud periodical sync
feat: INTEG-897, group files in Rack by class name

feat: INTEG-897, update UI to display files sync status message

feat: INTEG-897, implement Nextcloud sync for Rack documents

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -85,5 +85,10 @@
   "tuto.text.select": "pour sélectionner et accéder au menu d'options,",
   "tuto.title": "Naviguez au sein de votre casier en vue vignettes :",
   "unsetImage": "Supprimer l'image",
-  "upload": "Envoyer"
+  "upload": "Envoyer",
+  "rack.nextcloud.sync.info": "Les fichiers de votre casier sont synchronisés avec votre espace \"Documents synchronisés\".",
+  "rack.nextcloud.sync.info.link": "Cliquez ici pour les consulter.",
+  "rack.nextcloud.sync.state": "État :",
+  "rack.nextcloud.sync.state.ok": "Synchronisation réussie",
+  "rack.nextcloud.sync.state.syncing": "Synchronisation en cours"
 }
