feat: #PEDAGO-3602, react application

--- a/backend/src/main/resources/i18n/fr.json
+++ b/backend/src/main/resources/i18n/fr.json
@@ -1,6 +1,6 @@
 {
   "choose": "Parcourir",
-  "from": "De",
+  "from": "Expéditeur",
   "group.AdminLocal": "Administrateurs locaux de {0}.",
   "group.Direction": "Directeurs de {0}.",
   "group.Discipline": "Enseignants de discipline {0}.",
@@ -78,12 +78,60 @@
   "share.title": "Partager avec...",
   "share.users": "Utilisateurs",
   "title": "Titre",
-  "to": "A",
+  "to": "Destinataire",
   "tuto.action.open": "Cliquez sur l'icône",
   "tuto.action.select": "Cliquez",
   "tuto.text.open": "pour télécharger le document.",
   "tuto.text.select": "pour sélectionner et accéder au menu d'options,",
   "tuto.title": "Naviguez au sein de votre casier en vue vignettes :",
   "unsetImage": "Supprimer l'image",
-  "upload": "Envoyer"
+  "upload": "Envoyer",
+  "rack.upload": "Déposer dans un casier",
+  "rack.cancel": "Annuler",
+  "rack.delete": "Supprimer",
+  "rack.restore": "Restaurer",
+  "rack.table.name": "Nom du document",
+  "rack.table.to": "Destinataire",
+  "rack.table.from": "Expéditeur",
+  "rack.table.date": "Date",
+  "rack.selectAll": "Tout sélectionner",
+  "rack.noDocuments": "Aucun document",
+  "rack.modal.trash.document.header": "Déplacer le document à la corbeille",
+  "rack.modal.trash.document.subtitle": "Êtes-vous sûr de vouloir déplacer ce document à la corbeille ?",
+  "rack.modal.trash.document.info": "Vous pourrez restaurer ce document ultérieurement.",
+  "rack.modal.trash.document.btn": "Déplacer à la corbeille",
+  "rack.modal.trash.documents.header": "Déplacer les documents à la corbeille",
+  "rack.modal.trash.documents.subtitle": "Êtes-vous sûr de vouloir déplacer ces documents à la corbeille ?",
+  "rack.modal.trash.documents.info": "Vous pourrez restaurer ces documents ultérieurement.",
+  "rack.modal.trash.documents.btn": "Déplacer à la corbeille",
+  "rack.modal.delete.document.header": "Supprimer définitivement le document",
+  "rack.modal.delete.document.subtitle": "Êtes-vous sûr de vouloir supprimer ce document de manière définitive ?",
+  "rack.modal.delete.document.warning": "Cette action est irréversible.",
+  "rack.modal.delete.document.btn": "Supprimer",
+  "rack.modal.delete.documents.header": "Supprimer définitivement les documents",
+  "rack.modal.delete.documents.subtitle": "Êtes-vous sûr de vouloir supprimer ces documents de manière définitive ?",
+  "rack.modal.delete.documents.warning": "Cette action est irréversible.",
+  "rack.modal.delete.documents.btn": "Supprimer",
+  "rack.modal.restore.document.header": "Restaurer le document",
+  "rack.modal.restore.document.subtitle": "Êtes-vous sûr de vouloir restaurer ce document ?",
+  "rack.modal.restore.document.btn": "Restaurer",
+  "rack.modal.restore.documents.header": "Restaurer les documents",
+  "rack.modal.restore.documents.subtitle": "Êtes-vous sûr de vouloir restaurer ces documents ?",
+  "rack.modal.restore.documents.btn": "Restaurer",
+  "rack.selectRecipients": "Sélectionner les destinataires",
+  "rack.search.recipients": "Rechercher un utilisateur ou groupe",
+  "rack.selectedRecipients": "Destinataires sélectionnés",
+  "rack.noRecipientsSelected": "Pas de destinataires pour le moment...",
+  "rack.toast.uploaded": "Fichier(s) envoyé(s) avec succès",
+  "rack.copyToWorkspace": "Copier dans l'espace documentaire",
+  "rack.toast.copyToWorkspaceSuccess": "{{count}} document a été copié dans l'espace documentaire",
+  "rack.toast.copyToWorkspaceSuccess_plural": "{{count}} documents ont été copiés dans l'espace documentaire",
+  "rack.toast.copyToWorkspacePartialFailed": "{{succeeded}} document(s) copié(s), {{failed}} échec(s)",
+  "rack.toast.copyToWorkspaceFailed": "Impossible de copier {{count}} document(s) dans l'espace documentaire",
+  "rack.toast.downloadError": "Erreur lors du téléchargement du document",
+  "rack.toast.error": "Une erreur est survenue",
+  "rack.modal.addToWorkspace.title": "Ajout à l’espace doc",
+  "rack.modal.addToWorkspace.description": "Rechercher et/ou sélectionner le dossier où vous voulez copier l'élément.",
+  "rack.modal.addToWorkspace.cancel": "Annuler",
+  "rack.modal.addToWorkspace.add": "Ajouter"
 }
