feat: #PEDAGO-3602, add routes and i18n

--- a/backend/src/main/resources/i18n/fr.json
+++ b/backend/src/main/resources/i18n/fr.json
@@ -124,8 +124,8 @@
   "rack.noRecipientsSelected": "Pas de destinataires pour le moment...",
   "rack.toast.uploaded": "Fichier(s) envoyé(s) avec succès",
   "rack.copyToWorkspace": "Copier dans l'espace documentaire",
-  "rack.toast.copyToWorkspaceSuccess": "{{count}} document a été copié dans l'espace documentaire",
-  "rack.toast.copyToWorkspaceSuccess_plural": "{{count}} documents ont été copiés dans l'espace documentaire",
+  "rack.toast.copyToWorkspaceSuccess": "Le document a été copié dans l'espace documentaire",
+  "rack.toast.copyToWorkspaceSuccess_plural": "Les documents ont été copiés dans l'espace documentaire",
   "rack.toast.copyToWorkspacePartialFailed": "{{succeeded}} document(s) copié(s), {{failed}} échec(s)",
   "rack.toast.copyToWorkspaceFailed": "Impossible de copier {{count}} document(s) dans l'espace documentaire",
   "rack.toast.downloadError": "Erreur lors du téléchargement du document",
