chore: add missing i18n

--- a/backend/src/main/resources/i18n/fr.json
+++ b/backend/src/main/resources/i18n/fr.json
@@ -138,5 +138,7 @@
   "tuto.text.select": "pour sélectionner et accéder au menu d'options,",
   "tuto.title": "Naviguez au sein de votre casier en vue vignettes :",
   "unsetImage": "Supprimer l'image",
-  "upload": "Envoyer"
+  "upload": "Envoyer",
+  "rack.toast.trashed": "Le document a été déplacé dans la corbeille",
+  "rack.toast.deleted": "Le document a été supprimé"
 }
